--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,25 @@
 @import '~leaflet/dist/leaflet.css';
+h1 {
+  font-size: 24px;
+  margin-left: 20px;
+}
 .gwcApp {
   width: 100%;
   height: 600px;
   display: flex;
   flex-direction: row;
-  text-align: center;    
+  margin: 40px;
+  .opportunitiesList {
+    width: 95%;
+    th {
+      text-align: left;
+    }
+    td {
+      span {
+        font-weight: 700;
+      }
+    }
+  }
   .detailPane {
     width: 40%;
     height: 600px;
@@ -15,6 +30,11 @@
         width: 60%;
         margin-right: 10px;
       }
+    }
+    .closeButton {
+      float: right;
+      margin-right: 20px;
+      margin-top: 20px;
     }
   }
   .mapPane {
